--- a/style/style.css
+++ b/style/style.css
@@ -61,8 +61,14 @@
     padding-left: 200px;
     padding-top: 200px;
   }
- .failures_of-previous-year-text>ul{
+  #list-item{
     list-style: none;
+    color: #757575;
+    font-size: large;
+ }
+ #list-item>img{
+  height: 20px;
+  width: 20px;
  }
  /* what i do styles */
 .my-plans{
@@ -94,7 +100,7 @@
 height: 300px;
 margin: 20px auto;
 
-    background: url('../images/gradient1.png') right , url('../images/watch.png');
+    background: url('../images/gradient2.png') right , url('../images/watch.png');
     background-repeat:no-repeat;
     background-position: center;
   }
@@ -111,7 +117,7 @@ color: #ffffff;
   }
   /* about section styles */
   .about {
-    text-align: center;
+    /* text-align: center; */
     background-color: #b3e3ff;
     color: white;
     border-radius: 10px;
@@ -134,6 +140,7 @@ color: #ffffff;
     display: flex;
     justify-content: space-around;
   }
+
   .info-title {
     font-size: 20px;
     color: #757575;
@@ -142,6 +149,10 @@ color: #ffffff;
     font-size: 20px;
     font-weight: 700;
     color: #474747;}
+    .about-list{
+      margin: auto;
+      width: 50%;
+    }
   
   /* contact style */
 .contact{
